# ersa

./: .gitignore  CLI_REFACTORING_SUMMARY.md  Cargo.toml  LICENSE  PROJECT_CREATE_REFACTORING_SUMMARY.md  README.md  dist-workspace.toml  pkg.json
src/: lib.rs  log.rs  main.rs
src/cli/: console.rs  mod.rs
src/cli/add/: mod.rs
src/cli/lsp/: install.rs  mod.rs  update.rs
src/cli/new/: mod.rs
src/cli/pkg/: git.rs  install.rs  list.rs  mod.rs  remove.rs  update.rs  utils.rs
src/cli/project/: create.rs  mod.rs
src/network/: github.rs  mod.rs
