[package]
name = "ersa"
version = "0.1.0"
edition = "2024"
authors = ["Kiwiko"]
description = "GPC/GPX Package Manager & Utility"
repository = "https://github.com/zKiwiko/ersa"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
owo-colors = "4.2.0"
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
zip = "3.0.0"
semver = "1.0.26"
regex = "1.11.1"
