[package]
name = "ersa"
version = "0.1.0"
edition = "2024"
authors = ["Kiwiko"]
description = "GPC/GPX Package Manager & Utility"
repository = "https://github.com/zKiwiko/ersa"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
