[package]
name = "ersa"
version = "0.1.0"
edition = "2024"
authors = ["Kiwiko"]
description = "GPC/GPX Package Manager & Utility"
repository = "https://github.com/zKiwiko/ersa"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ersa_lsp_core = "0.2.0"
regex = "1.11.1"
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.49.0", features = ["full"] }
